--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.2",
     "astro": "^4.5.14",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vercel": "^34.2.8"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.33.1",
-    "@typescript-eslint/eslint-plugin": "^6.11.0"
+    "eslint-plugin-astro": "^0.33.1"
   },
   "eslintConfig": {
     "extends": "standard"
